[fix]form-フィードバック箇所の修正
フィードバック箇所のhtmlを修正しました。

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="item tel__container">
-              <p class="item__label">電話番号<span class="required"> ※</span></p>
+              <p class="item__label">電話番号</p>
               <input type="tel" name="tel" class="item__input focus-item" placeholder="ex) 09012345678">
             </div>
 
@@ -89,15 +89,15 @@
               <p class="item__label">希望コース</p>
               <div class="course__contents">
                 <label class="course__content">
-                  <input type="checkbox" name="checkbox[]" class="course__check">
+                  <input type="checkbox" name="checkbox[]" value="frontend" class="course__check">
                   <span class="checkbox__parts">フロントエンド</span>
                 </label>
                 <label class="course__content">
-                  <input type="checkbox" name="checkbox[]" class="course__check">
+                  <input type="checkbox" name="checkbox[]" value="backend" class="course__check">
                   <span class="checkbox__parts">バックエンド</span>
                 </label>
                 <label class="course__content">
-                  <input type="checkbox" name="checkbox[]" class="course__check">
+                  <input type="checkbox" name="checkbox[]" value="application" class="course__check">
                   <span class="checkbox__parts">アプリ</span>
                 </label>
               </div>
